[tool.poetry]
name = "ms-exchange-user-enum"
version = "0.1.0"
description = ""
authors = ["xh4vm <h4vm@yandex.ru>"]
readme = "README.md"
packages = [{include = "ms_exchange_user_enum"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
click = "^8.1.7"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
